# JCZXAutoScript

./: .gitignore  AGENTS.md  README.md  README_OLD.md  SDE.bat  TASK_CONFIG_GUIDE.md  TODO_LIST.md  UI.ui  Ui_UI.py  Ui_jczxQuarryCalculator.py  Ui_jczxUI.py  build.py  jczx.py  jczxFM.py  jczxQuarryCalculator.ui  main.py  pyproject.toml  start.bat
docs/superpowers/plans/: 2026-06-07-taskview-plan.md  2026-07-04-placeholder-resolver-consolidation.md  2026-07-04-task-execution-lifecycle.md  2026-07-05-multi-file-config.md  2026-07-06-task-queue-plan.md  2026-07-07-debug-screenshot-plan.md
docs/superpowers/specs/: 2026-06-07-taskview-design.md  2026-07-04-placeholder-resolver-consolidation-design.md  2026-07-04-task-execution-lifecycle-design.md  2026-07-05-multi-file-config-design.md  2026-07-06-task-queue-design.md  (+3 more)
hooks/: hook-paddle.py  hook-paddleocr.py  hook-paddlepaddle.py
jczx/: Ui_jczxQuarryCalculator.py  Ui_jczxTaskCreater.py  Ui_jczxUI.py  configEntity.py  jczx.py  jczxCli.py  jczxFM.py  jczxMainInfo.py  jczxQuarry.py  jczxTaskCreater.ui  jczxTyping.py  jczxUI.ui  multPick.py  taskManage.py  translate.py  widgets.py
jczx/Config/: Config.txt  MainMenu.txt  Queues.txt
jczx/Css/: main.tcss
jczx/debug/: __init__.py  annotator.py  recorder.py
jczx/emu/: __init__.py  base.py  mumu.py
jczx/resources/: jczxQuarryCalculator.ui  jczxUI.ui
resources-2.2.1-backup/: screenshot.py
resources-2.2.1-backup/icon/: icon.py
resources/icon/: icon.qrc
taskView/: README.md  __main__.py  graph_builder.py  server.py
taskView/static/: index.html
(+5 files in other folders)
