[project]
name = "jczx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "onnxruntime>=1.26.0",
    "opencv-python>=4.13.0.92",
    "paddleocr>=3.7.0",
    "pick>=2.6.0",
    "requests>=2.34.2",
    "textual>=8.2.7",
    "uiautomator2>=3.5.2",
    "uvicorn>=0.49.0",
]
